--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-time-machine
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme 
 title: Ziting HE
 description: Welcome to Ziting He's Homepage
